# evoBasic-lang

./: .gitignore  AST.cpp  AST.h  CMakeLists.txt  Exception.h  LICENSE  Lexer.cpp  Lexer.h  Link.cpp  Link.h  Logger.cpp  Logger.h  Parser.cpp  Parser.h  README.md  README_CN.md  Semantic.cpp  Semantic.h  SymbolTable.cpp  SymbolTable.h  Type.cpp  Type.h  backage.proto  cmdDistribute.cpp  cmdDistribute.h  config.h  main.cpp  test.txt
doc/: IL3.md  gammar  grammar.bnf  il-meta.bnf  il.md  il_select3.md  instruction_select.md  root_set_trace.md  tutorial.md
ebc/: AST.cs  Backage.cs  Logger.cs  Program.cs  draft.md  ebc.csproj  evoBasic.g4
ebc/analyzer/: Semantic.cs  Symbol.cs
ebc/analyzer/pass/: FstPass.cs  SndPass.cs  TrdPass.cs
ebc/codegen/: Assembly.cs  Bytecode.cs  ILGen.cs
ebc/parser/: evoBasic.interp  evoBasic.tokens  evoBasicBaseListener.cs  evoBasicBaseVisitor.cs  evoBasicLexer.cs  evoBasicLexer.interp  evoBasicListener.cs  evoBasicParser.cs  evoBasicVisitor.cs
ebc/utils/: ASCIITree.cs  Source.cs  Utils.cs
evm/: CMakeLists.txt  asciitree.h  backage.pb.cc  backage.pb.h  bytecode.h  dependencies.h  ebffi.cpp  ebffi.h  gc.h  interop.cpp  interop.h  loader.cpp  loader.h  main.cpp  processor.cpp  processor.h  runtime.cpp  runtime.h  unicode.cpp  unicode.h  utils.h
langlibs/: intrinsic.eb  test.eb  test2.eb
langlibs/core/: Array.eb  Box.eb  Exception.eb  LinkedList.eb  List.eb  Log.eb  Object.eb  Stack.eb  String.eb  Text.eb
langlibs/math/: random.eb
src/: config.h  main.cpp
src/compiler/: CMakeLists.txt  ast.cpp  ast.h  codeGen.cpp  codeGen.h  context.cpp  context.h  il.cpp  il.h  ilGen.cpp  ilGen.h  ir.cpp  ir.h  lexer.cpp  lexer.h  main.cpp  parseTree.cpp  parseTree.h  parser.cpp  parser.h  semantic.cpp  semantic.h  token.cpp  token.h  type.cpp  type.h  visitor.h
src/compiler/semantic/: baseVisitor.cpp  baseVisitor.h  defaultVisitor.cpp  defaultVisitor.h  detailCollector.cpp  detailCollector.h  semantic.cpp  semantic.h  symbolCollector.cpp  symbolCollector.h  typeAnalyzer.cpp  typeAnalyzer.h
src/ecc/: CMakeLists.txt  main.cpp
src/evm/: CMakeLists.txt  interpreter.cpp  intrinsic.cpp  intrinsic.h  invoke.cpp  invoke.h  main.cpp  memory.h  operation.h  processor.cpp  processor.h  runtime.cpp  runtime.h  stack.cpp  stack.h
src/frontend/: AST.cpp  AST.h  Exception.cpp  Exception.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Semantic.cpp  Semantic.h  Type.cpp  Type.h  ast.cpp  ast.h  codeGen.cpp  codeGen.h  context.cpp  context.h  ir.cpp  ir.h  lexer.cpp  parser.cpp  parser.h  semantic.cpp  semantic.h  type.cpp  type.h  visitor.cpp  visitor.h
src/interpreter/: Interpreter.cpp  Interpreter.h  Intrinsics.cpp  Intrinsics.h
src/share/analyzer/: ast.cpp  ast.h  context.cpp  context.h  defaultVisitor.h  detailCollector.cpp  detailCollector.h  helper.cpp  helper.h  semantic.cpp  semantic.h  symbolCollector.cpp  symbolCollector.h  type.cpp  type.h  typeAnalyzer.cpp  typeAnalyzer.h  visitor.h
src/share/codegen/: ilGen.cpp  ilGen.h
src/share/execution/: intrinsic.cpp  intrinsic.h  memory.h  runtime.cpp  runtime.h
src/share/loader/: bytecode.cpp  bytecode.h  il.cpp  il.h  loader.cpp  loader.h
src/share/parser/: lexer.cpp  lexer.h  parseTree.cpp  parseTree.h  parser.cpp  token.cpp  token.h
src/share/utils/: cmd.cpp  cmd.h  config.h  data.h  enums.h  format.h  i18n.cpp  i18n.h  logger.cpp  logger.h  nullSafe.h  unicode.cpp  unicode.h  utils.cpp  utils.h
src/std/: io.eb
src/utils/: Link.cpp  Link.h  Logger.cpp  Logger.h  bytecode.cpp  bytecode.h  cmd.cpp  cmd.h  cmdDistribute.cpp  cmdDistribute.h  data.cpp  data.h  dataDef.h  dependencies.h  enums.h  format.h  formator.h  i18n.h  il.h  intrinsic.h  loader.cpp  loader.h  logger.cpp  logger.h  nullSafe.h  stringEnum.h  utils.cpp  utils.h
src/vm/: CMakeLists.txt  bytecode.cpp  bytecode.h  interpreter.h  intrinsic.h  invoke.cpp  invoke.h  main.cpp  operation.h  stack.h
test/: CMakeLists.txt  codegen.cc  compileHelper.h  dotExpEquCls.md  semantic_test.cc  semantic_test.cpp  semantic_test.hpp
testsuite/: test.py
testsuite/material/: 10_pass_optional_args.eb  11_pass_paramarray.eb  12_recursive_func.eb  13_enum.eb  14_userdefine_type.eb  15_class.eb  1_hello_world.eb  2_oneline_if.eb  3_if_then_elseif_else.eb  4_dim_special_types.eb  5_ops.eb  6_dim_assign.eb  7_loop.eb  8_array.eb  9_pass_normal_args.eb
tool/: debug.txt  log_analyzer.py
